galeria llena y costos establecidos

--- a/index.html
+++ b/index.html
@@ -173,13 +173,13 @@
                     <span id="text_costo_nat" class="320px:absolute 320px:text-white 320px:top-1/2 320px:left-1/2 320px:transform 320px:-translate-x-1/2 320px:-translate-y-1/2 320px:font-helvetic 320px:text-2xl">NATACIÓN</span>
                     <span class="900px:hidden 320px:absolute 320px:text-white 320px:top-2/3 320px:left-1/2 320px:transform 320px:-translate-x-1/2 320px:-translate-y-1/2 320px:font-helvetic 320px:text-sm">Ver Detalles</span>
                 </a>
-                <a id="alert_tea" href="javascript:void(0)" class="320px:relative 320px:w-72 820px:w-96 320px:h-72 820px:h-80 320px:mx-auto 320px:rounded-lg">
+                <a href="./pages/teatro.html" class="320px:relative 320px:w-72 820px:w-96 320px:h-72 820px:h-80 320px:mx-auto 320px:rounded-lg">
                     <div id="box_costo_tea" class="320px:absolute 320px:w-full 320px:h-full rounded-lg 320px:bg-black 320px:opacity-70 transition duration-300 hover:bg-verde_catolica hover:cursor-pointer"></div>
                     <img class="w-full h-full object-cover rounded-lg" src="/images/talleres_costos/tc_teatro.webp" alt="Imagen de teatro">
                     <span id="text_costo_tea" class="320px:absolute 320px:text-white 320px:top-1/2 320px:left-1/2 320px:transform 320px:-translate-x-1/2 320px:-translate-y-1/2 320px:font-helvetic 320px:text-2xl">TEATRO</span>
                     <span class="900px:hidden 320px:absolute 320px:text-white 320px:top-2/3 320px:left-1/2 320px:transform 320px:-translate-x-1/2 320px:-translate-y-1/2 320px:font-helvetic 320px:text-sm">Próximamente</span>
                 </a>
-                <a id="alert_bal" href="javascript:void(0)" class="320px:relative 320px:w-72 820px:w-96 320px:h-72 820px:h-80 320px:mx-auto 320px:rounded-lg">
+                <a href="./pages/ballet.html" class="320px:relative 320px:w-72 820px:w-96 320px:h-72 820px:h-80 320px:mx-auto 320px:rounded-lg">
                     <div id="box_costo_bal" class="320px:absolute 320px:w-full 320px:h-full rounded-lg 320px:bg-black 320px:opacity-70 transition duration-300 hover:bg-amarillo_catolica hover:cursor-pointer"></div>
                     <img class="w-full h-full object-cover rounded-lg" src="/images/talleres_costos/tc_ballet.webp" alt="Imagen de ballet">
                     <span id="text_costo_bal" class="320px:absolute 320px:text-white 320px:top-1/2 320px:left-1/2 320px:transform 320px:-translate-x-1/2 320px:-translate-y-1/2 320px:font-helvetic 320px:text-2xl">BALLET</span>
@@ -188,7 +188,7 @@
             </div>
         </section>
 
-        <section id="noticias" class="320px:px-4 1400px:w-1400px 1400px:mx-auto">
+        <section id="noticias" class="320px:px-4 1260px:w-1200px 1400px:w-1400px 1260px:mx-auto">
             <h2 class="320px:text-verde_catolica 320px:font-bree_bold 320px:text-3xl 1100px:text-4xl 320px:text-center 320px:mb-4">Descubre más</h2>
             <div id="slider_noticias" class="swiper">
                 <div class="swiper-wrapper">
@@ -201,7 +201,7 @@
                             <div class="320px:flex 320px:justify-between 320px:mt-4">
                                 <div class="320px:flex 320px:items-center 320px:gap-1">
                                     <img class="320px:w-5" src="icons/calendario.png" alt="icono fecha">
-                                    <p class="320px:font-bree_regular 320px:text-gris_catolica_letra 320px:text-xs">02 Octubre, 2024</p>
+                                    <p class="320px:font-bree_regular 320px:text-gris_catolica_letra 320px:text-xs">02 Diciembre, 2024</p>
                                 </div>
                                 <div>
                                     <img class="320px:w-5" src="/icons/marcador.png" alt="icono link noticia">
@@ -398,19 +398,19 @@
                 <img class="w-full" src="/images/galeria_natacion/gal_nat6.webp" alt="">
                 <img class="w-full" src="/images/galeria_natacion/gal_nat7.webp" alt="">
                 <img class="w-full" src="/images/galeria_natacion/gal_nat.webp" alt="">
-                <img class="w-full" src="/images/galeria_natacion/gal_nat2.webp" alt="">
+                <img class="w-full" src="" alt="">
             </div>
             <div class="col-gallery">
-                <img class="w-full" src="/images/galeria_natacion/gal_nat3.webp" alt="">
-                <img class="w-full" src="/images/galeria_natacion/gal_nat.webp" alt="">
-                <img class="w-full" src="/images/galeria_natacion/gal_nat2.webp" alt="">
-                <img class="w-full" src="/images/galeria_natacion/gal_nat3.webp" alt="">
+                <img class="w-full" src="https://images.pexels.com/photos/6011891/pexels-photo-6011891.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="">
+                <img class="w-full" src="https://images.pexels.com/photos/346777/pexels-photo-346777.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="">
+                <img class="w-full" src="https://images.pexels.com/photos/18090684/pexels-photo-18090684/free-photo-of-agua-hombres-mujer-sentado.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="">
+                <img class="w-full" src="https://images.pexels.com/photos/8028671/pexels-photo-8028671.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="">
             </div>
             <div class="col-gallery">
-                <img class="w-full" src="/images/galeria_natacion/gal_nat4.webp" alt="">
-                <img class="w-full" src="/images/galeria_natacion/gal_nat5.webp" alt="">
-                <img class="w-full" src="/images/galeria_natacion/gal_nat6.webp" alt="">
-                <img class="w-full" src="/images/galeria_natacion/gal_nat7.webp" alt="">
+                <img class="w-full" src="https://images.pexels.com/photos/7790657/pexels-photo-7790657.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="">
+                <img class="w-full" src="https://images.pexels.com/photos/29635417/pexels-photo-29635417/free-photo-of-competicion-de-natacion.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="">
+                <img class="w-full" src="https://images.pexels.com/photos/8028317/pexels-photo-8028317.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="">
+                <img class="w-full" src="https://images.pexels.com/photos/16318474/pexels-photo-16318474/free-photo-of-relajacion-nina-piscina-nadando.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="">
             </div>
         </div>
     </div>
@@ -418,28 +418,28 @@
         <img id="close_modal_tea" class="320px:absolute hover:cursor-pointer" src="/icons/equis_blanco.png" alt="Icono de cerrar">
         <div class="row-gallery">
             <div class="col-gallery">
-                <img class="w-full" src="" alt="">
-                <img class="w-full" src="" alt="">
-                <img class="w-full" src="" alt="">
-                <img class="w-full" src="" alt="">
+                <img class="w-full" src="https://images.pexels.com/photos/8462907/pexels-photo-8462907.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="">
+                <img class="w-full" src="https://images.pexels.com/photos/2896167/pexels-photo-2896167.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="">
+                <img class="w-full" src="https://images.pexels.com/photos/8463039/pexels-photo-8463039.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="">
+                <img class="w-full" src="https://images.pexels.com/photos/8463041/pexels-photo-8463041.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="">
             </div>
             <div class="col-gallery">
-                <img class="w-full" src="" alt="">
-                <img class="w-full" src="" alt="">
-                <img class="w-full" src="" alt="">
-                <img class="w-full" src="" alt="">
+                <img class="w-full" src="https://images.pexels.com/photos/6895808/pexels-photo-6895808.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="">
+                <img class="w-full" src="https://images.pexels.com/photos/1049746/pexels-photo-1049746.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="">
+                <img class="w-full" src="https://images.pexels.com/photos/1714361/pexels-photo-1714361.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="">
+                <img class="w-full" src="https://images.pexels.com/photos/1083855/pexels-photo-1083855.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="">
             </div>
             <div class="col-gallery">
-                <img class="w-full" src="" alt="">
-                <img class="w-full" src="" alt="">
-                <img class="w-full" src="" alt="">
-                <img class="w-full" src="" alt="">
+                <img class="w-full" src="https://images.pexels.com/photos/458379/pexels-photo-458379.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="">
+                <img class="w-full" src="https://images.pexels.com/photos/2888802/pexels-photo-2888802.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="">
+                <img class="w-full" src="https://images.pexels.com/photos/2779023/pexels-photo-2779023.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="">
+                <img class="w-full" src="https://images.pexels.com/photos/20240875/pexels-photo-20240875/free-photo-of-hombre-disfraz-traje-uniforme.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="">
             </div>
             <div class="col-gallery">
-                <img class="w-full" src="" alt="">
-                <img class="w-full" src="" alt="">
-                <img class="w-full" src="" alt="">
-                <img class="w-full" src="" alt="">
+                <img class="w-full" src="https://images.pexels.com/photos/14582135/pexels-photo-14582135.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="">
+                <img class="w-full" src="https://images.pexels.com/photos/17013753/pexels-photo-17013753/free-photo-of-hombres-en-pie-de-pie-escenario.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="">
+                <img class="w-full" src="https://images.pexels.com/photos/6896181/pexels-photo-6896181.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="">
+                <img class="w-full" src="https://images.pexels.com/photos/17466374/pexels-photo-17466374/free-photo-of-mujer-en-pie-de-pie-sujetando.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="">
             </div>
         </div>
     </div>
@@ -447,28 +447,28 @@
         <img id="close_modal_bal" class="320px:absolute hover:cursor-pointer" src="/icons/equis_blanco.png" alt="Icono de cerrar">
         <div class="row-gallery">
             <div class="col-gallery">
-                <img class="w-full" src="" alt="">
-                <img class="w-full" src="" alt="">
-                <img class="w-full" src="" alt="">
-                <img class="w-full" src="" alt="">
+                <img class="w-full" src="https://images.pexels.com/photos/358010/pexels-photo-358010.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="">
+                <img class="w-full" src="https://images.pexels.com/photos/10708010/pexels-photo-10708010.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="">
+                <img class="w-full" src="https://images.pexels.com/photos/17029899/pexels-photo-17029899/free-photo-of-mujer-arte-bailando-joven.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="">
+                <img class="w-full" src="https://images.pexels.com/photos/5149588/pexels-photo-5149588.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="">
             </div>
             <div class="col-gallery">
-                <img class="w-full" src="" alt="">
-                <img class="w-full" src="" alt="">
-                <img class="w-full" src="" alt="">
-                <img class="w-full" src="" alt="">
+                <img class="w-full" src="https://images.pexels.com/photos/2803819/pexels-photo-2803819.png?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="">
+                <img class="w-full" src="https://images.pexels.com/photos/16404861/pexels-photo-16404861/free-photo-of-mujer-bailando-en-pie-de-pie.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="">
+                <img class="w-full" src="https://images.pexels.com/photos/21311036/pexels-photo-21311036/free-photo-of-mujer-bailando-escenario-actuacion.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="">
+                <img class="w-full" src="https://images.pexels.com/photos/13425708/pexels-photo-13425708.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="">
             </div>
             <div class="col-gallery">
-                <img class="w-full" src="" alt="">
-                <img class="w-full" src="" alt="">
-                <img class="w-full" src="" alt="">
-                <img class="w-full" src="" alt="">
+                <img class="w-full" src="https://images.pexels.com/photos/5150532/pexels-photo-5150532.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="">
+                <img class="w-full" src="https://images.pexels.com/photos/5149630/pexels-photo-5149630.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="">
+                <img class="w-full" src="https://images.pexels.com/photos/8463008/pexels-photo-8463008.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="">
+                <img class="w-full" src="https://images.pexels.com/photos/5153950/pexels-photo-5153950.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="">
             </div>
             <div class="col-gallery">
-                <img class="w-full" src="" alt="">
-                <img class="w-full" src="" alt="">
-                <img class="w-full" src="" alt="">
-                <img class="w-full" src="" alt="">
+                <img class="w-full" src="https://images.pexels.com/photos/5153961/pexels-photo-5153961.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="">
+                <img class="w-full" src="https://images.pexels.com/photos/5150498/pexels-photo-5150498.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="">
+                <img class="w-full" src="https://images.pexels.com/photos/5153997/pexels-photo-5153997.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="">
+                <img class="w-full" src="https://images.pexels.com/photos/8463021/pexels-photo-8463021.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="">
             </div>
         </div>
     </div>
