--- a/pages/natacion.html
+++ b/pages/natacion.html
@@ -16,11 +16,11 @@
         <div id="sliders" class="swiper 320px:h-450px 700:h-550px relative">
             <div class="swiper-wrapper">
                 <div class="swiper-slide">
-                    <img class="w-full h-full object-cover" src="/images/sliders/slider_catolica_1.webp" alt="Slider relacionado a la natación">
-                    <div class="absolute top-0 left-0 bg-black z-20 w-full h-full opacity-50"></div>
+                    <img class="w-full h-full object-cover" src="https://images.pexels.com/photos/29665125/pexels-photo-29665125.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="Slider relacionado a la natación">
+                    <div class="absolute top-0 left-0 bg-azul_catolica z-20 w-full h-full opacity-50"></div>
                     <div class="z-50 absolute top-0 left-0 text-white w-full h-full text-center flex flex-col justify-center items-center 940px:px-25% 320px:px-5% gap-2">
-                        <h1 class="1360px:text-8xl 940px:text-7xl 320px:text-5xl 940px:mt-0 text-azul_catolica font-bree_bold">TALLER DE NATACIÓN</h1>
-                        <h2 class="font-bree_bold 1360px:text-4xl 940px:text-3xl 320px:text-xl">¡Sumérgete en la diversión!</h2>
+                        <h1 class="1360px:text-9xl 940px:text-8xl 320px:text-6xl 940px:mt-0 text-white font-bree_bold">NATACIÓN</h1>
+                        <h2 class="font-bree_bold 1360px:text-4xl 940px:text-3xl 320px:text-2xl">¡Sumérgete en la diversión!</h2>
                         <!-- <p class="font-bree_regular 1360px:text-base 320px:text-sm  text-gray-300">Vive una experiencia alegre y emocionante mientras aprendes a nadar. Las clases están diseñadas para combinar el aprendizaje con la diversión en cada sesión</p> -->
                         <!-- <button class="bg-azul_catolica px-10 py-1 rounded-md 320px:mt-4 font-bree_regular outline outline-1 outline-azul_catolica hover:bg-transparent hover:cursor-pointer transition duration-500 1260px:text-base 940px:text-sm 320px:text-xs 1360px:mt-10">CONTÁCTANOS</button> -->
                         <a href="https://wa.me/997470362" target="_blank" class="320px:bg-azul_catolica 320px:text-white 320px:font-bree_regular 320px:px-7 py-0.5 320px:rounded-lg hover:bg-blue-500 duration-300">Contáctanos</a>
@@ -98,26 +98,29 @@
         </ul>
     </header>
 
-    <main class="1000px:w-940px 1260px:w-1200px 1000px:mx-auto 1000px:flex 1000px:flex-row-reverse 320px:mt-4">
-        <section>
-            <div class="320px:bg-verde_catolica 320px:text-white 320px:font-bold 320px:p-4 320px:rounded-md 320px:shadow-md animate__animated animate__bounce 320px:w-310px 320px:mx-auto">
-                Las promociones están disponibles hasta el <span class="underline">21 de diciembre</span>.
-            </div>              
-        </section>
-        <section class="320px:mt-5 320px:flex 320px:flex-col 320px:gap-4 320px:w-11/12 320px:mx-auto 440px:w-420px 1000px:mt-0">
+    <main class="1000px:w-940px 1260px:w-1200px 900px:mx-auto 900px:flex 900px:flex-row-reverse 320px:mt-4 1800:gap-8">
+        <section class="320px:flex 320px:flex-col 320px:w-11/12 320px:mx-auto 320px:gap-4 900px:w-auto">
+            <img class="320px:mx-auto 320px:w-80" src="/images/promos/titulo.png" alt="Titulo de promociones">
             <div class="320px:flex 320px:flex-col 320px:gap-4">
+                <img class="320px:w-80 320px:mx-auto" src="/images/promos/promo_2meses.png" alt="Promoción por 2 meses de matrícula">
+                <img class="320px:w-80 320px:mx-auto" src="/images/promos/promo_enero.png" alt="Promoción por el mes de Enero">
+                <img class="320px:w-80 320px:mx-auto" src="/images/promos/promo_febrero.png" alt="Promocion por el mes de febrero">
+            </div>
+        </section>
+        <section class="320px:mt-5 320px:flex 320px:flex-col 320px:gap-4 320px:w-11/12 900px:w-96 1000px:w-500px 320px:mx-auto 440px:w-420px 900px:mt-0 1800:flex-row-reverse 1800:w-900px">
+            <div class="320px:flex 320px:flex-col 320px:gap-4 1800:w-2/4">
                 <div id="aquabebé">
                     <div class="320px:border 320px:rounded-lg 320px:border-gray-400">
                         <div class="320px:bg-azul_catolica 320px:text-white 320px:font-bree_bold 320px:py-1 320px:flex 320px:flex-col 320px:items-center 320px:leading-none 320px:rounded-t-lg">
-                            <span class="320px:text-lg">Aquabebé</span>
-                            <span class="320px:text-sm font-bree_regular">(9 meses a 4 años)</span>
+                            <span class="320px:text-lg 440px:text-xl">Aquabebé</span>
+                            <span class="320px:text-sm 440px:text-base font-bree_regular">(9 meses a 4 años)</span>
                         </div>
                         <div class="flex justify-around bg-amarillo_catolica font-bree_regular items-center">
                             <span>Turno</span>
                             <span>Horario</span>
                             <span>Costo</span>
                         </div>
-                        <div class="grid grid-cols-3 grid-rows-custom items-center text-center py-3 font-bree_regular text-xs">
+                        <div class="grid grid-cols-3 grid-rows-custom items-center text-center py-3 font-bree_regular text-xs 440px:text-base">
                             <span>Lu/Mi/Vi</span>
                             <span>12 - 12:45 pm</span>
                             <span class="col-start-3 col-end-4 row-start-1 row-end-5">S/. 350</span>
@@ -130,15 +133,15 @@
                 <div id="menores_1">
                     <div class="320px:border 320px:rounded-lg 320px:border-gray-400">
                         <div class="320px:bg-azul_catolica 320px:text-white 320px:font-bree_bold 320px:py-1 320px:flex 320px:flex-col 320px:items-center 320px:leading-none 320px:rounded-t-lg">
-                            <span class="320px:text-lg">Menores 1</span>
-                            <span class="320px:text-sm font-bree_regular">(5 a 7 años)</span>
+                            <span class="320px:text-lg 440px:text-xl">Menores 1</span>
+                            <span class="320px:text-sm 440px:text-base font-bree_regular">(5 a 7 años)</span>
                         </div>
                         <div class="flex justify-around bg-amarillo_catolica font-bree_regular items-center">
                             <span>Turno</span>
                             <span>Horario</span>
                             <span>Costo</span>
                         </div>
-                        <div class="grid grid-cols-3 grid-rows-8 items-center text-center py-3 font-bree_regular text-xs">
+                        <div class="grid grid-cols-3 grid-rows-8 items-center text-center py-3 font-bree_regular text-xs 440px:text-base">
                             <span class="col-start-1 col-end-2 row-start-1 row-end-9">Lu/Mi/Vi<br>Ma/Ju/Sa</span>
                             <span>8 - 8:45 am</span>
                             <span class="col-start-3 col-end-4 row-start-1 row-end-9">S/. 300</span>
@@ -155,15 +158,15 @@
                 <div id="menores_2">
                     <div class="320px:border 320px:rounded-lg 320px:border-gray-400">
                         <div class="320px:bg-azul_catolica 320px:text-white 320px:font-bree_bold 320px:py-1 320px:flex 320px:flex-col 320px:items-center 320px:leading-none 320px:rounded-t-lg">
-                            <span class="320px:text-lg">Menores 2</span>
-                            <span class="320px:text-sm font-bree_regular">(8 a 14 años)</span>
+                            <span class="320px:text-lg 440px:text-xl">Menores 2</span>
+                            <span class="320px:text-sm 440px:text-base font-bree_regular">(8 a 14 años)</span>
                         </div>
                         <div class="flex justify-around bg-amarillo_catolica font-bree_regular items-center">
                             <span>Turno</span>
                             <span>Horario</span>
                             <span>Costo</span>
                         </div>
-                        <div class="grid grid-cols-3 grid-rows-8 items-center text-center py-3 font-bree_regular text-xs">
+                        <div class="grid grid-cols-3 grid-rows-8 items-center text-center py-3 font-bree_regular text-xs 440px:text-base">
                             <span class="col-start-1 col-end-2 row-start-1 row-end-9">Lu/Mi/Vi<br>Ma/Ju/Sa</span>
                             <span>8 - 8:50 am</span>
                             <span class="col-start-3 col-end-4 row-start-1 row-end-9">S/. 300</span>
@@ -178,19 +181,19 @@
                     </div>
                 </div>
             </div>
-            <div class="320px:flex 320px:flex-col 320px:gap-4">
+            <div class="320px:flex 320px:flex-col 320px:gap-4 1800:w-2/4">
                 <div id="jovenes">
                     <div class="320px:border 320px:rounded-lg 320px:border-gray-400">
                         <div class="320px:bg-azul_catolica 320px:text-white 320px:font-bree_bold 320px:py-1 320px:flex 320px:flex-col 320px:items-center 320px:leading-none 320px:rounded-t-lg">
-                            <span class="320px:text-lg">Jóvenes y Adultos</span>
-                            <span class="320px:text-sm font-bree_regular">(15 años a más)</span>
+                            <span class="320px:text-lg 440px:text-xl">Jóvenes y Adultos</span>
+                            <span class="320px:text-sm 440px:text-base font-bree_regular">(15 años a más)</span>
                         </div>
                         <div class="flex justify-around bg-amarillo_catolica font-bree_regular items-center">
                             <span>Turno</span>
                             <span>Horario</span>
                             <span>Costo</span>
                         </div>
-                        <div class="grid grid-cols-3 grid-rows-5 items-center text-center py-3 font-bree_regular text-xs">
+                        <div class="grid grid-cols-3 grid-rows-5 items-center text-center py-3 font-bree_regular text-xs 440px:text-base">
                             <span class="col-start-1 col-end-2 row-start-1 row-end-6">Lu/Mi/Vi<br>Ma/Ju/Sa</span>
                             <span>6 - 6:50 am</span>
                             <span class="col-start-3 col-end-4 row-start-1 row-end-6">S/. 230</span>
@@ -204,15 +207,15 @@
                 <div id="habilidades">
                     <div class="320px:border 320px:rounded-lg 320px:border-gray-400">
                         <div class="320px:bg-azul_catolica 320px:text-white 320px:font-bree_bold 320px:py-1 320px:flex 320px:flex-col 320px:items-center 320px:leading-none 320px:rounded-t-lg">
-                            <span class="320px:text-lg">Niños con Habilidades Blandas</span>
-                            <span class="320px:text-sm font-bree_regular">(4 a 7 años)</span>
+                            <span class="320px:text-lg 440px:text-xl">Niños con Habilidades Blandas</span>
+                            <span class="320px:text-sm 440px:text-base font-bree_regular">(4 a 7 años)</span>
                         </div>
                         <div class="flex justify-around bg-amarillo_catolica font-bree_regular items-center">
                             <span>Turno</span>
                             <span>Horario</span>
                             <span>Costo</span>
                         </div>
-                        <div class="grid grid-cols-3 grid-rows-1 items-center text-center py-3 font-bree_regular text-xs">
+                        <div class="grid grid-cols-3 grid-rows-1 items-center text-center py-3 font-bree_regular text-xs 440px:text-base">
                             <span class="col-start-1 col-end-2 row-start-1 row-end-6">Lu/Mi/Vi</span><!-- <br>Ma/Ju/Sa -->
                             <span>2 - 2:45 pm</span>
                             <span class="col-start-3 col-end-4 row-start-1 row-end-6">S/. 350</span>
@@ -222,14 +225,14 @@
                 <div id="seleccion">
                     <div class="320px:border 320px:rounded-lg 320px:border-gray-400">
                         <div class="320px:bg-azul_catolica 320px:text-white 320px:font-bree_bold 320px:py-1 320px:flex 320px:flex-col 320px:items-center 320px:leading-none 320px:rounded-t-lg">
-                            <span class="320px:text-lg">Selección</span>
-                            <span class="320px:text-sm font-bree_regular">Club la Católica</span>
+                            <span class="320px:text-lg 440px:text-xl">Selección</span>
+                            <span class="320px:text-sm 440px:text-base font-bree_regular">Club la Católica</span>
                         </div>
                         <div class="flex justify-around bg-amarillo_catolica font-bree_regular items-center">
                             <span>Turno</span>
                             <span>Horario</span>
                         </div>
-                        <div class="grid grid-cols-2 grid-rows-1 items-center text-center py-3 font-bree_regular text-xs">
+                        <div class="grid grid-cols-2 grid-rows-1 items-center text-center py-3 font-bree_regular text-xs 440px:text-base">
                             <span class="col-start-1 col-end-2 row-start-1 row-end-6">Lu - Vi</span>
                             <span>1 - 3 pm</span>
                         </div>
