--- a/pages/natacion.html
+++ b/pages/natacion.html
@@ -63,30 +63,30 @@
                     <li id="icono_cerrar_nav" class="absolute w-7 right-5 top-5">
                         <img src="/icons/equis.png" alt="Icono de X para cerrar el menú">
                     </li>
-                    <a id="inicio_movil" class="font-bree_bold text-2xl text-black 940px:text-base hover:bg-white hover:text-black duration-500 px-4 py-1 rounded-md" href="#header">
+                    <a id="inicio_movil" class="font-bree_bold text-2xl text-azul_catolica 940px:text-base hover:bg-white hover:text-black duration-500 px-4 py-1 rounded-md" href="#header">
                         <li class="">Inicio</li>
                     </a>
-                    <a id="nosotros_movil" class="font-bree_bold text-2xl text-black 940px:text-base hover:bg-white hover:text-black duration-500 px-4 py-1 rounded-md" href="/index.html">
+                    <a id="nosotros_movil" class="font-bree_bold text-2xl text-azul_catolica 940px:text-base hover:bg-white hover:text-black duration-500 px-4 py-1 rounded-md" href="#nosotros">
                         <li class="">Nosotros</li>
                     </a>
-                    <a id="tallere_movil" class="font-bree_bold text-2xl text-black 940px:text-base hover:bg-white hover:text-black duration-500 px-4 py-1 rounded-md" href="/index.html#talleres_costos">
+                    <a id="tallere_movil" class="font-bree_bold text-2xl text-azul_catolica 940px:text-base hover:bg-white hover:text-black duration-500 px-4 py-1 rounded-md" href="#talleres_costos">
                         <li class="">Talleres y Costos</li>
                     </a>
-                    <a id="noticias_movil" class="font-bree_bold text-2xl text-black 940px:text-base hover:bg-white hover:text-black duration-500 px-4 py-1 rounded-md" href="/index.html#noticias">
+                    <a id="noticias_movil" class="font-bree_bold text-2xl text-azul_catolica 940px:text-base hover:bg-white hover:text-black duration-500 px-4 py-1 rounded-md" href="#noticias">
                         <li class="">Noticias</li>
                     </a>
-                    <a id="galeria_movil" class="font-bree_bold text-2xl text-black 940px:text-base hover:bg-white hover:text-black duration-500 px-4 py-1 rounded-md" href="/index.html#galeria">
+                    <a id="galeria_movil" class="font-bree_bold text-2xl text-azul_catolica 940px:text-base hover:bg-white hover:text-black duration-500 px-4 py-1 rounded-md" href="#galeria">
                         <li class="">Galeria</li>
                     </a>
-                    <a id="contactanos_movil" class="font-bree_bold text-2xl text-black 940px:text-base hover:bg-white hover:text-black duration-500 px-4 py-1 rounded-md" href="#contacto">
+                    <a id="contactanos_movil" class="font-bree_bold text-2xl text-azul_catolica 940px:text-base hover:bg-white hover:text-black duration-500 px-4 py-1 rounded-md" href="#contacto">
                         <li class="">Contáctanos</li>
                     </a>
                 </ul>
                 <ul class="absolute right-0 bottom-16 z-50 flex w-full justify-center gap-4">
-                    <a href="https://www.facebook.com/share/19zxjhfCCC/?mibextid=LQQJ4d" target="_blank"><li class="p-1 rounded-md flex items-center justify-center duration-500 hover:cursor-pointer hover:bg-gray-300"><img class="w-7" src="/icons/facebook-negro.png" alt="Icono de Facebook"></li></a>
-                    <a href="https://wa.me/997470362" target="_blank"><li class="p-1 rounded-md flex items-center justify-center duration-500 hover:cursor-pointer hover:bg-gray-300"><img class="w-7" src="/icons/whatsapp-negro.png" alt="Icono de Whatsapp"></li></a>
-                    <a href="https://www.instagram.com/clubdeportivo_lacatolica/profilecard/?igsh=MW42ZTBjOWt1NnU5aw==" target="_blank"><li class="p-1 rounded-md flex items-center justify-center duration-500 hover:cursor-pointer hover:bg-gray-300"><img class="w-7" src="/icons/instagram-negro.png" alt="Icono de Instagram"></li></a>
-                    <a href="https://www.tiktok.com/@clubdeporlacatolica?_t=ZM-8rkAtNsfdF2&_r=1" target="_blank"><li class="p-1 rounded-md flex items-center justify-center duration-500 hover:cursor-pointer hover:bg-gray-300"><img class="w-7" src="/icons/tik-tok-negro.png" alt="Icono de Tik Tok"></li></a>
+                    <a href="https://www.facebook.com/share/19zxjhfCCC/?mibextid=LQQJ4d" target="_blank"><li class="p-1 rounded-md flex items-center justify-center duration-500 hover:cursor-pointer hover:bg-gray-300"><img class="w-7" src="/icons/facebook_azul.png" alt="Icono de Facebook"></li></a>
+                    <a href="https://wa.me/997470362" target="_blank"><li class="p-1 rounded-md flex items-center justify-center duration-500 hover:cursor-pointer hover:bg-gray-300"><img class="w-7" src="/icons/whatsapp-azul.png" alt="Icono de Whatsapp"></li></a>
+                    <a href="https://www.instagram.com/clubdeportivo_lacatolica/profilecard/?igsh=MW42ZTBjOWt1NnU5aw==" target="_blank"><li class="p-1 rounded-md flex items-center justify-center duration-500 hover:cursor-pointer hover:bg-gray-300"><img class="w-7" src="/icons/instagram-azul.png" alt="Icono de Instagram"></li></a>
+                    <a href="https://www.tiktok.com/@clubdeporlacatolica?_t=ZM-8rkAtNsfdF2&_r=1" target="_blank"><li class="p-1 rounded-md flex items-center justify-center duration-500 hover:cursor-pointer hover:bg-gray-300"><img class="w-7" src="/icons/tik-tok-azul.png" alt="Icono de Tik Tok"></li></a>
                 </ul>
             </nav>
         </div>
