--- a/index.html
+++ b/index.html
@@ -69,30 +69,30 @@
                     <li id="icono_cerrar_nav" class="absolute w-7 right-5 top-5">
                         <img src="/icons/equis.png" alt="Icono de X para cerrar el menú">
                     </li>
-                    <a id="inicio_movil" class="font-bree_bold text-2xl text-black 940px:text-base hover:bg-white hover:text-black duration-500 px-4 py-1 rounded-md" href="#header">
+                    <a id="inicio_movil" class="font-bree_bold text-2xl text-azul_catolica 940px:text-base hover:bg-white hover:text-black duration-500 px-4 py-1 rounded-md" href="#header">
                         <li class="">Inicio</li>
                     </a>
-                    <a id="nosotros_movil" class="font-bree_bold text-2xl text-black 940px:text-base hover:bg-white hover:text-black duration-500 px-4 py-1 rounded-md" href="#nosotros">
+                    <a id="nosotros_movil" class="font-bree_bold text-2xl text-azul_catolica 940px:text-base hover:bg-white hover:text-black duration-500 px-4 py-1 rounded-md" href="#nosotros">
                         <li class="">Nosotros</li>
                     </a>
-                    <a id="tallere_movil" class="font-bree_bold text-2xl text-black 940px:text-base hover:bg-white hover:text-black duration-500 px-4 py-1 rounded-md" href="#talleres_costos">
+                    <a id="tallere_movil" class="font-bree_bold text-2xl text-azul_catolica 940px:text-base hover:bg-white hover:text-black duration-500 px-4 py-1 rounded-md" href="#talleres_costos">
                         <li class="">Talleres y Costos</li>
                     </a>
-                    <a id="noticias_movil" class="font-bree_bold text-2xl text-black 940px:text-base hover:bg-white hover:text-black duration-500 px-4 py-1 rounded-md" href="#noticias">
+                    <a id="noticias_movil" class="font-bree_bold text-2xl text-azul_catolica 940px:text-base hover:bg-white hover:text-black duration-500 px-4 py-1 rounded-md" href="#noticias">
                         <li class="">Noticias</li>
                     </a>
-                    <a id="galeria_movil" class="font-bree_bold text-2xl text-black 940px:text-base hover:bg-white hover:text-black duration-500 px-4 py-1 rounded-md" href="#galeria">
+                    <a id="galeria_movil" class="font-bree_bold text-2xl text-azul_catolica 940px:text-base hover:bg-white hover:text-black duration-500 px-4 py-1 rounded-md" href="#galeria">
                         <li class="">Galeria</li>
                     </a>
-                    <a id="contactanos_movil" class="font-bree_bold text-2xl text-black 940px:text-base hover:bg-white hover:text-black duration-500 px-4 py-1 rounded-md" href="#contacto">
+                    <a id="contactanos_movil" class="font-bree_bold text-2xl text-azul_catolica 940px:text-base hover:bg-white hover:text-black duration-500 px-4 py-1 rounded-md" href="#contacto">
                         <li class="">Contáctanos</li>
                     </a>
                 </ul>
                 <ul class="absolute right-0 bottom-16 z-50 flex w-full justify-center gap-4">
-                    <a href="https://www.facebook.com/share/19zxjhfCCC/?mibextid=LQQJ4d" target="_blank"><li class="p-1 rounded-md flex items-center justify-center duration-500 hover:cursor-pointer hover:bg-gray-300"><img class="w-7" src="/icons/facebook-negro.png" alt="Icono de Facebook"></li></a>
-                    <a href="https://wa.me/997470362" target="_blank"><li class="p-1 rounded-md flex items-center justify-center duration-500 hover:cursor-pointer hover:bg-gray-300"><img class="w-7" src="/icons/whatsapp-negro.png" alt="Icono de Whatsapp"></li></a>
-                    <a href="https://www.instagram.com/clubdeportivo_lacatolica/profilecard/?igsh=MW42ZTBjOWt1NnU5aw==" target="_blank"><li class="p-1 rounded-md flex items-center justify-center duration-500 hover:cursor-pointer hover:bg-gray-300"><img class="w-7" src="/icons/instagram-negro.png" alt="Icono de Instagram"></li></a>
-                    <a href="https://www.tiktok.com/@clubdeporlacatolica?_t=ZM-8rkAtNsfdF2&_r=1" target="_blank"><li class="p-1 rounded-md flex items-center justify-center duration-500 hover:cursor-pointer hover:bg-gray-300"><img class="w-7" src="/icons/tik-tok-negro.png" alt="Icono de Tik Tok"></li></a>
+                    <a href="https://www.facebook.com/share/19zxjhfCCC/?mibextid=LQQJ4d" target="_blank"><li class="p-1 rounded-md flex items-center justify-center duration-500 hover:cursor-pointer hover:bg-gray-300"><img class="w-7" src="/icons/facebook_azul.png" alt="Icono de Facebook"></li></a>
+                    <a href="https://wa.me/997470362" target="_blank"><li class="p-1 rounded-md flex items-center justify-center duration-500 hover:cursor-pointer hover:bg-gray-300"><img class="w-7" src="/icons/whatsapp-azul.png" alt="Icono de Whatsapp"></li></a>
+                    <a href="https://www.instagram.com/clubdeportivo_lacatolica/profilecard/?igsh=MW42ZTBjOWt1NnU5aw==" target="_blank"><li class="p-1 rounded-md flex items-center justify-center duration-500 hover:cursor-pointer hover:bg-gray-300"><img class="w-7" src="/icons/instagram-azul.png" alt="Icono de Instagram"></li></a>
+                    <a href="https://www.tiktok.com/@clubdeporlacatolica?_t=ZM-8rkAtNsfdF2&_r=1" target="_blank"><li class="p-1 rounded-md flex items-center justify-center duration-500 hover:cursor-pointer hover:bg-gray-300"><img class="w-7" src="/icons/tik-tok-azul.png" alt="Icono de Tik Tok"></li></a>
                 </ul>
             </nav>
         </div>
@@ -108,7 +108,7 @@
         <section id="nosotros" class="320px:my-10 1100px:my-16  1260px:gap-3 1100px:mx-auto">
             <div class="1100px:w-3/5 1100px:mx-auto 320px:mx-5">
                 <h2 class="320px:text-3xl 1100px:text-4xl 320px:font-bree_bold 320px:text-azul_catolica 320px:text-center 320px:mb-3">Nosotros</h2>
-                <p class="320px:text-gris_catolica_letra 320px:font-bree_regular 320px:text-center 320px:text-15px 440px:w-96 540px:w-500px 700:w-600px 1100px:w-full 440px:mx-auto 1600px:text-lg">¡Bienvenido al Club Deportivo "La Católica"! Ofrecemos clases de natación, teatro y ballet en un entorno inspirador y lleno de energía. Fomentamos el desarrollo personal y artístico de nuestros estudiantes, creando una comunidad apasionada que celebra el talento y la creatividad. Un lugar donde cada clase es una oportunidad para brillar!</p>
+                <p class="320px:text-gris_catolica_letra 320px:font-bree_regular 320px:text-center 320px:text-15px 440px:w-96 540px:w-500px 700:w-600px 1100px:w-full 440px:mx-auto 1600px:text-lg">¡Bienvenido al Club Deportivo La Católica! Ofrecemos clases de natación, teatro y ballet en un entorno inspirador y lleno de energía. Fomentamos el desarrollo personal y artístico de nuestros estudiantes, creando una comunidad apasionada que celebra el talento y la creatividad. Un lugar donde cada clase es una oportunidad para brillar!</p>
                 <p class="320px:text-gris_catolica_letra 320px:font-bree_regular 320px:text-center 320px:text-lg 1000px:text-2xl 440px:w-96 540px:w-500px 700:w-600px 1100px:w-full 440px:mx-auto 320px:mt-4">¡Potencia tu talento aquí!</p>
             </div>
             <div class="320px:my-5 1100px:my-0 1100px:mt-10 1360px:mt-20 bg-azul_catolica 320px:px-4 540px:px-12 700:px-4 1500px:px-7 320px:py-9">
@@ -313,9 +313,9 @@
                 <div id="button_gal_nat" class="320px:relative 320px:w-64 700:w-80 700:h-96 320px:h-80 320px:mx-auto 320px:rounded-lg 320px:hover:cursor-pointer">
                     <div id="gal_natacion" class="swiper 320px:w-full 320px:h-full">
                         <div class="swiper-wrapper">
-                            <img class="swiper-slide 320px:w-full 320px:h-full 320px:object-cover 320px:rounded-2xl" src="https://images.pexels.com/photos/29635418/pexels-photo-29635418.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="imagenes galeria">
-                            <img class="swiper-slide 320px:w-full 320px:h-full 320px:object-cover 320px:rounded-2xl" src="https://images.pexels.com/photos/711187/pexels-photo-711187.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="imagenes galeria">
-                            <img class="swiper-slide 320px:w-full 320px:h-full 320px:object-cover 320px:rounded-2xl" src="https://images.pexels.com/photos/9900039/pexels-photo-9900039.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="imagenes galeria">
+                            <img class="swiper-slide 320px:w-full 320px:h-full 320px:object-cover 320px:rounded-2xl" src="./images/galeria_natacion/gal_nat.webp" alt="imagenes galeria">
+                            <img class="swiper-slide 320px:w-full 320px:h-full 320px:object-cover 320px:rounded-2xl" src="./images/galeria_natacion/gal_nat2.webp" alt="imagenes galeria">
+                            <img class="swiper-slide 320px:w-full 320px:h-full 320px:object-cover 320px:rounded-2xl" src="./images/galeria_natacion/gal_nat3.webp" alt="imagenes galeria">
                         </div>
                     </div>
                     <button class="320px:bg-azul_catolica hover:320px:bg-blue-500 hover:cursor-pointer duration-300 320px:absolute 320px:w-full 320px:left-0 320px:bottom-0 320px:z-20 320px:text-white 320px:font-bree_regular 320px:py-1 rounded-b-2xl">Ver Galeria - Natación</button>
@@ -486,6 +486,5 @@
     <script src="/js/animated.js"></script>
     <script src="/js/modal.js"></script>
     <script src="/js/costos.js"></script>
-    <script src="/js/alerta.js"></script>
 </body>
 </html>
