se agrego ciertas mejoras en el SEO aen la primera versión

--- a/pages/natacion.html
+++ b/pages/natacion.html
@@ -10,6 +10,10 @@
     <link rel="stylesheet" href="/node_modules/swiper/swiper-bundle.min.css">
 
     <link rel="shortcut icon" href="/icons/favi.png" type="image/x-icon">
+
+    <meta name="description" content="Academia de natación, teatro y ballet. Ofrecemos clases especializadas para niños, jóvenes y adultos. ¡Ven a aprender y disfruta del arte y el deporte!">
+    <meta name="robots" content="index, follow">
+    <meta name="keywords" content="academia de natación, clases de ballet, clases de teatro, academia, niños, teatro, ballet, natación, piscina temperada, piscina techada, club, carabayllo, cono norte, la catolica, club deportivo, lima">
 </head>
 <body>
     <header id="header" class="relative">
